# ot-harjoitustyo

./: .coverage  .gitignore  README.TXT  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  maarittelydokumentti.md  nano.save  työaikakirjanpito.md  työaikakirjanpito.md.save
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .coverage  .~lock.level1..csv#  button.py  display.py  gameloop.py  harry.py  level1.py  main.py  menu.py  simon.py  text.py  tile.py  user_events.py
src/assets/: .~lock.level1..csv#  level1..csv
src/tests/: harry_test.py
