[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Helen Tirkkonen <helen.tirkkonen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
pygame = "^2.0.1"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.3"
pylint = "^2.7.4"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
